--- a/main.css
+++ b/main.css
@@ -8,3 +8,37 @@
   margin: 0 auto;  
   width: 600px;
 }
+
+li {
+  list-style: none; display:inline;
+  padding-right: 20px;
+}
+ul {
+  padding-left: 0;
+  float:left;
+}
+
+nav{
+  border-top: 1px dotted black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.content {
+  width:579;
+  border-right: 1px dotted black;
+  border-top: 1px dotted black;
+  border-bottom: 1px dotted black;
+  padding-right:20px;
+}
+
+.footer{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+
+
+
+
+
